--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "qewd-jsdb-piscina",
-  "version": "0.1.1",
+  "version": "0.1.3",
   "description": "Opens access to QEWD-JSdb from a Piscina Worker Thread",
   "main": "index.js",
   "scripts": {
@@ -14,7 +14,9 @@
   "license": "Apache-2.0",
   "dependencies": {
     "qewd-mg-dbx": "",
-    "ewd-document-store": "",
+    "ewd-document-store": ""
+  },
+  "optionalDependencies": {
     "mg-dbx": ""
   },
   "bugs": {
